--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,11 @@ jobs:
     container: nixos/nix
     steps:
     - uses: actions/checkout@master
+    - name: Cache nix store
+      uses: actions/cache@v1
+      with:
+        path: /nix/store
+        key: ${{ runner.os }}-nix
     - run: nix-shell --pure --run "make all test"
       env:
         ENVIRONMENT: production
