Pin checkout action version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     container: nixos/nix@2.3
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
     - run: nix-shell --pure --run "make all test"
       env:
         ENVIRONMENT: production
